Fix shopping cart button overlapping with open mobile main menu.
#78

--- a/sources/stylesheets/_menus.scss
+++ b/sources/stylesheets/_menus.scss
@@ -108,7 +108,7 @@
 
     &.expanded {
       position: absolute;
-      z-index: 50;
+      z-index: 500001;
       top: 60px;
       right: 10px;
       display: block;
